# AZADI_TEB

./: .gitignore  README.md  README_INIT.md  build.sh  build_incremental.sh  capture.sh  shot.sh  shots.sh
app/: AzadiTeb.sln
app/AzadiTeb.UI/: App.axaml  App.axaml.cs  AzadiTeb.UI.csproj  Program.cs  ViewLocator.cs  app.manifest
assets/admission/: admission.css  admission.js  bridge.js  contextmenu.js  index.html
backend/: CMakeLists.txt
backend/include/azaditeb/: BillingService.hpp  IRepository.hpp  Json.hpp  MemoryRepository.hpp  Models.hpp
backend/src/: BillingService.cpp  MemoryRepository.cpp  main.cpp
backend/tests/: billing_tests.cpp
docs/: ARCHITECTURE_V2.md  BACKUP_IMPORT_ARCHITECTURE.md  CHANGELOG.md  HANDOFF_NEXT.md  PROJECT_GUIDE.md  PROMPT.md  SHOTS_1.4.0.md  UI_ARCHITECTURE_DECISION.md
scripts/: backup.sh  mock_designer_host.py  shot_designer.py  test_admission_dom.js  test_designer.py
src/: admin.cpp  app.h  app.manifest  app.rc  appointment.cpp  av_reception.cpp  av_reception.h  backup.cpp  backup_analyzer.cpp  backup_analyzer.h  backup_log.cpp  backup_log.h  backup_log_viewer.cpp  backup_mtf.cpp  backup_mtf.h  billing.cpp  calculator.cpp  client_log.cpp  client_log.h  data_ext.cpp  dialogs.cpp  employees.cpp  gdiplus.cpp  handlers.cpp  insurance.cpp  main.cpp  manage.inc  net_sync.cpp  net_sync.h  print_designer.cpp  print_designer.h  print_designer_templates.inc  print_designer_ui.inc  printer.cpp  printer_designer.inc  profile_requests.cpp  reception.cpp  saved_messages.cpp  sections.cpp  sections.h  (+34 more)
update/: version.txt
(+44 files in other folders)
